minor last changes from joe for submission

--- a/Manuscripts/cogsci-2017/paper.tex
+++ b/Manuscripts/cogsci-2017/paper.tex
@@ -34,7 +34,7 @@ Madison, WI 53706 USA
 
 \begin{abstract}
 
-Generating new concepts is an intriguing yet understudied topic in cognitive science. In this paper, we present a novel exemplar model of category generation: PACKER (\textit{Producing Alike and Contrasting Knowledge using Exemplar Representations}). PACKER's core design assumptions are (1) categories are represented as exemplars in a multidimensional psychological space, (2) generated items should be similar to exemplars of the same category, and (3) generated categories should be dissimilar to existing categories. A behavioral study reveals strong effects of contrast- and target-class similarity, which are directly predicted by the PACKER model but are not explained by existing formal approaches. 
+Generating new concepts is an intriguing yet understudied topic in cognitive science. In this paper, we present a novel exemplar model of category generation: PACKER (\textit{Producing Alike and Contrasting Knowledge using Exemplar Representations}). PACKER's core design assumptions are (1) categories are represented as exemplars in a multidimensional psychological space, (2) generated items should be similar to exemplars of the same category, and (3) generated categories should be dissimilar to existing categories. A behavioral study reveals strong effects of contrast- and target-class similarity. These effects are novel empirical phenomena, which are directly predicted by the PACKER model but are not explained by existing formal approaches. 
 
 \textbf{Keywords:} 
 Categorization, exemplar models, category generation, creative cognition, computational modeling.
@@ -46,7 +46,7 @@ The creation of new concepts and ideas is among the most interesting -- yet infr
 
 Recent work has proposed and tested formal models to explain these observations. \citet{jern2013probabilistic} trained participants on experimenter-defined categories composed of exemplars within an artificial three-dimensional domain. After a short training phase, participants were asked to generate exemplars from a new category. Participants were provided with a set of scales to adjust the feature values of each generated stimulus, and were given unlimited time to create each example. As in the classic \cite{ward1994structured} experiment, \citet{jern2013probabilistic} found that generated categories possessed the same feature variance and correlations as the experimenter-defined categories in the domain. 
 
-\citet{jern2013probabilistic} tested several different computational models on their data. Most relevant to the present investigation, they tested a `copy-and-tweak' model that generates items by copying and changing previous observations, and a hierarchical Bayesian model that uses the structure of known categories to infer the structure of new ones. The authors found that the hierarchical Bayesian model provided the strongest account of the behavioral results.
+\citet{jern2013probabilistic} tested several different computational models on their data. Most relevant to the present investigation, they tested a `copy-and-tweak' model that generates items by copying and changing previous observations, and a hierarchical Bayesian model that uses the structure of known categories to infer the structure of new ones. They found that the hierarchical Bayesian model provided the strongest account of the behavioral results.
 
 
 \begin{figure*}
@@ -70,7 +70,7 @@ As in the GCM, the similarity between two examples, $s\left(x_i, x_j\right)$, is
   s\left(x_i,x_j\right) = \exp \left\{ -c \sum_{k}{ \left| x_{ik} - x_{jk} \right|}w_k \right\}
   \label{eq:similarity}
 \end{equation}
-where $w_k$ is the attention weighting of dimension $k$ ($w_k \geq 0$ and $\sum_k{w_k} = 1$), accounting for the relative importance of each dimension in similarity calculations, and $c$ ($c>0$) is a specificity parameter controlling the spread of exemplar generalization. For simplicity, simulations will use uniform attention weights, except in our discussion of individual differences.  
+where $w_k$ is the attention weighting of dimension $k$ ($w_k \geq 0$ and $\sum_k{w_k} = 1$), accounting for the relative importance of each dimension in similarity calculations, and $c$ ($c>0$) is a specificity parameter controlling the spread of exemplar generalization. For simplicity, our simulations will use uniform attention weights, except in our discussion of individual differences.  
 
 To generate a new example, the model considers both the similarity to examples from contrast categories as well as the similarity to examples (if any exist) in the target category. The aggregated similarity $a$ between generation candidate $y$ and stored exemplars $x$ is $a(y, x) = \sum_j{f(x_j) s(y, x_j)}$, where $f(x_j)$ is a function specifying the extent to which each exemplar contributes to the target category. For brevity, we abbreviate $f(x_j)$ as $f_j$. PACKER sets $f_j$ depending on exemplar $j$'s category membership: $f_j = \phi$ if $x_j$ is a member of a contrast category, and $f_j = \gamma$ if $x_j$ is a member of the target category. $\phi$ and $\gamma$ are free parameters ($-\infty \leq \phi, \gamma \leq \infty$) controlling the contribution of contrast- and target-category similarity, respectively (see Figure \ref{fig:example-prob-spaces}). Larger absolute values result in greater consideration of those exemplars, with values of 0 eliminating their effect. A negative value for $f_j$ produces a `repelling' effect (exemplars are less likely to be generated nearby $x_j$). Conversely, a positive value for $f_j$ produces an `attracting' effect (exemplars are more likely to be generated nearby $x_j$). 
 
@@ -114,7 +114,7 @@ where $\theta$ is a response determinism parameter, $\tau$ is the similarity thr
 
 Based on several results inconsistent with the copy-and-tweak account, \citet{jern2013probabilistic} advocated a hierarchical Bayesian model. Exemplars of each category were generated from a multivariate Normal distribution over the dimensions of stimulus space. The mean of each category was independently generated, but the covariance matrix (encoding feature variances and correlations) was generated from a common prior distribution. New categories are produced by generating a new mean (uniform over stimulus space) and covariance matrix from the common prior distribution. Because the shared prior distribution's parameters were unobserved, a hierarchical Bayesian model uses information from the previous categories (their feature variances and correlations) to generate the covariance matrix of the new category.
 
-Each category's exemplars are assumed to be a multivariate Normal distribution with parameters ($\mu, \Sigma$). Each category's covariance matrix is assumed to be inverse-Wishart distributed with parameters ($v$, $\kappa,$ and $\Sigma_D$).\footnote{Note that \citet{jern2013probabilistic}'s model is slightly different, as they used a non-conjugate model. Their model acts very similar to our version of it and receives comparable fits.} $\Sigma_D$ is the covariance matrix shared between categories. We assume the shared covariance matrix $\Sigma_D$ is generated from a Wishart distribution (for conjugacy) with parameters $v_0$, $\kappa_0$, and $\Sigma_0$. We set $\nu_0 = \kappa_0 = 1$, and $\Sigma_0 = \rho {\bf I}$, where $\rho$ is a free parameter controlling the expected variance of dimensions (dimensions of the shared covariance matrix are expected to be uncorrelated) and ${\bf I}$ is the identity matrix.
+Each category's exemplars are assumed to be a multivariate Normal distribution with parameters ($\mu, \Sigma$). Each category's covariance matrix is assumed to be inverse-Wishart distributed with parameters ($v$, $\kappa,$ and $\Sigma_D$).\footnote{Note that \citet{jern2013probabilistic}'s model is slightly different, as they used a non-conjugate model. Their model acts very similar to our version of it and receives comparable fits.} $\Sigma_D$ is the covariance matrix shared between categories. We assume the shared covariance matrix $\Sigma_D$ is generated from a Wishart distribution (for conjugacy) with parameters $v_0$, $\kappa_0$, and $\Sigma_0$. We set $\nu_0 = 4$, and $\Sigma_0 = \rho {\bf I}$, where $\rho$ is a free parameter controlling the expected variance of dimensions (dimensions of the shared covariance matrix are expected to be uncorrelated) and ${\bf I}$ is the identity matrix.
 
 To simplify the model predictions, we used {\em maximum a posteriori} (MAP) estimates for the hidden parameters and then generated new categories based on those estimates. Due to conjugacy, the MAP estimate for the shared covariance matrix $\Sigma_D = \Sigma_0 + \sum_c{C_c}$, where $C_c$ is the empirical covariance matrix of category $c$. The MAP estimate of the covariance matrix for the target category $B$ is 
 \begin{equation}
@@ -159,7 +159,7 @@ The experiment follows the paradigm developed by \citet{jern2013probabilistic}: 
 
 %, instantiating the two conditions of the experiment. In both conditions, members of the Alpha category are tightly clustered, with equal feature variance and no feature correlations. Our manipulation is fairly `weak': the conditions have only a slight difference in the y-axis position of the Alpha category. In the `Middle' condition the Alpha category is placed in the center of the space, in the `Bottom' condition the Alpha category is placed in the bottom-center of the space. 
 
-Although our manipulation is minimal, the PACKER model predicts strong between-condition differences. PACKER proposes that the nature of the space not occupied by the Alpha category determines where members of the Beta category are likely to be generated. Thus, the lower areas of the stimulus space should be less frequently used for generation in the Bottom condition compared to the Middle (as these areas possess greater similarity to the Bottom Alpha category). Conversely, the upper areas of the stimulus space should be used for generation more frequently in the Bottom condition compared to Middle.
+Although our manipulation is minimal, the PACKER model predicts strong between-condition differences. According to PACKER, the nature of the space not occupied by the Alpha category should determine where members of the Beta category are likely to be generated. Thus, the lower areas of the stimulus space should be less frequently used for generation in the Bottom condition compared to the Middle (as these areas possess greater similarity to the Bottom Alpha category). Conversely, the upper areas of the stimulus space should be used for generation more frequently in the Bottom condition compared to Middle.
 
 
 More generally, PACKER proposes that the probability a stimulus $y$ will be generated is a function of its similarity to contrast categories \textit{and} to members of the target category. Two more general predictions (not specific to either condition) follow from this proposal: (1) the location of Beta examples should be positively related to distance from the Alpha category, and (2) Beta examples should be more similar to one another than they are to members of the Alpha category.
@@ -186,7 +186,7 @@ Following the training phase, participants were asked to generate four examples 
 
 Several sample Beta categories are depicted in Figure \ref{fig:beta.samples}. Because the conditions differ only in their location along the y-axis, we first focus on how Beta exemplars are generated above and below the contrast category. As is evident in Figure \ref{fig:beta.samples}, we observed broad individual differences in generation strategy: Whereas some participants generated all four Beta examples within a narrow y-axis range, others generated Beta examples along a wide range. 
 
-To evaluate the key predictions of PACKER, we determined the number of participants in each condition who placed at least one Beta examplar on the top and bottom `rows' of the space (the maximum and minimum possible y-axis value, respectively). The resulting contingencies data are shown in Table \ref{table:subset-table}. Fisher's Exact Tests reveal that more Middle participants generated a Beta exemplar in the bottom row , $p < 0.001$, but the conditions did not differ in use of the top of the space, $p = 0.16$. More Middle participants placed Beta exemplars in the top \textit{and} bottom rows, $p = 0.038$. 
+To evaluate the key predictions of PACKER, we determined the number of participants in each condition who placed at least one Beta exemplar on the top and bottom `rows' of the space (the maximum and minimum possible y-axis value, respectively). The resulting contingencies data are shown in Table \ref{table:subset-table}. Fisher's Exact Tests reveal that more Middle participants generated a Beta exemplar in the bottom row , $p < 0.001$, but the conditions did not differ in use of the top of the space, $p = 0.16$. More Middle participants placed Beta exemplars in the top \textit{and} bottom rows, $p = 0.038$. 
 
 \begin{table}
 \begin{center} 
@@ -216,7 +216,7 @@ Finally, we computed for each participant the average distance between exemplars
 
 Our results support PACKER's predictions: People tend to generate items that are dissimilar from the contrast category and similar to the target category. We observed considerable differences in generation between the Middle and Bottom conditions: Participants in the Bottom condition were less likely to use the bottom row of the stimulus space for generation, and participants in the Middle condition were more likely to create categories spanning the entire y-axis (utilizing the top and bottom row of the space). This latter result is especially interesting as it conflicts with previous results: Qualitatively different types of categories were generated, depending only on the location of the Alphas. 
 
-Some aspects of the results described above are somewhat commonsense: They demonstrate that the location of existing categories imposes constraints on generation because people tend to generate examples in areas not occupied by existing categories. This principle, however, is not predicted by existing models of generation -- these models were designed to explain distributional correspondences between generated and existing categories, not effects of contrast.  
+Some aspects of the results described above are somewhat commonsense: They demonstrate that the location of existing categories imposes constraints on generation because people tend to generate examples in areas not occupied by existing categories. This principle, however, is novel and not predicted by existing models of generation -- these models were designed to explain distributional correspondences between generated and existing categories, not effects of contrast.  
 
 \begin{figure}
     \begin{center}
@@ -230,7 +230,7 @@ Some aspects of the results described above are somewhat commonsense: They demon
 \section{Model Evaluation}
 To obtain an overall sense of each model's ability to explain our results, we fit each model by maximizing the log-likelihood of the model's predictions of the human results. The $c$, $\phi$, $\gamma$, and $\theta$ parameters were fitted for PACKER; $c$, $\tau$, and $\theta$ were fitted for the copy-and-tweak model, and $\kappa$, $\rho$, $\nu$, and $\theta$ were fitted for the hierarchical sampling model. Note that each model possess a $\theta$ parameter fulfilling the same role (response determinism), and PACKER shares with copy-and-tweak a specificity parameter, $c$. Attention in PACKER and copy-and-tweak was set uniformly. Parameters were not allowed to vary between participants or conditions -- the goal was to obtain the best-fitting values to our entire dataset.
 
-Each model's best-fitting parameterization is shown in Table \ref{table:model-fits}. Overall, PACKER outperformed copy-and-tweak and the hierarchical sampling model by a considerable margin ($\sim17\%$ improvement in log-likelihood). The parameter settings associated with PACKER's best fit are exactly as expected: a strong preference for items that are similar to members of the target category but are dissimilar to members of the contrast category. A similar pattern of results was obtained when we only considered the second to fourth exemplars generated by each participant.
+Each model's best-fitting parameterization is shown in Table \ref{table:model-fits}. Overall, PACKER outperformed copy-and-tweak and the hierarchical sampling model by a considerable margin ($\sim12\%$ improvement in log-likelihood). The parameter settings associated with PACKER's best fit are exactly as expected: a strong preference for items that are similar to members of the target category but are dissimilar to members of the contrast category. A similar pattern of results was obtained when we only considered the second to fourth exemplars generated by each participant.
 
 Our model-fitting results make sense given the assumptions made by each model. As the copy-and-tweak and hierarchical sampling models are not influenced by the location of contrast categories within the space, they do not capture the broad tendency for generated items to be dissimilar to existing classes. 
 
