misc snippets for cogpsych manuscript

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -1,5 +1,13 @@
-
-
+@article{hidaka2011packing,
+  title={Packing: a geometric analysis of feature selection and category formation},
+  author={Hidaka, Shohei and Smith, Linda B},
+  journal={Cognitive systems research},
+  volume={12},
+  number={1},
+  pages={1--18},
+  year={2011},
+  publisher={Elsevier}
+}
 
 @article{jern2013probabilistic,
   title={A probabilistic account of exemplar and category generation},
@@ -12,6 +20,17 @@
   publisher={Elsevier}
 }
 
+@article{marsh1999inadvertent,
+  title={The inadvertent use of prior knowledge in a generative cognitive task},
+  author={Marsh, Richard L and Ward, Thomas B and Landau, Joshua D},
+  journal={Memory \& Cognition},
+  volume={27},
+  number={1},
+  pages={94--105},
+  year={1999},
+  publisher={Springer}
+}
+
 @article{nosofsky1984choice,
   title={Choice, similarity, and the context theory of classification.},
   author={Nosofsky, Robert M},
@@ -21,6 +40,17 @@
   pages={104},
   year={1984},
   publisher={American Psychological Association}
+}
+
+@article{smith1993constraining,
+  title={Constraining effects of examples in a creative generation task},
+  author={Smith, Steven M and Ward, Thomas B and Schumacher, Jay S},
+  journal={Memory \& Cognition},
+  volume={21},
+  number={6},
+  pages={837--845},
+  year={1993},
+  publisher={Springer}
 }
 
 @article{ward1994structured,
