--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -1,7 +1,18 @@
+@Article{conaway2016similar,
+author="Conaway, Nolan and Kurtz, Kenneth J.",
+title="Similar to the category, but not the exemplars: A study of generalization",
+journal="Psychonomic Bulletin {\&} Review",
+year="2016",
+pages="1--12",
+abstract="Reference point approaches have dominated the study of categorization for decades by explaining classification learning in terms of similarity to stored exemplars or averages of exemplars. The most successful reference point models are firmly grounded in the associative learning tradition---treating categorization as a stimulus generalization process based on inverse exponential distance in psychological space augmented by a dimensional selective attention mechanism. We present experiments that pose a significant challenge to popular reference point accounts which explain categorization in terms of stimulus generalization from exemplars, prototypes, or adaptive clusters. DIVA, a similarity-based alternative to the reference point framework, provides a successful account of the human data. These findings suggest that a successful psychology of categorization may need to look beyond stimulus generalization and toward a view of category learning as the induction of a richer model of the data.",
+issn="1531-5320",
+doi="10.3758/s13423-016-1208-1",
+}
+
 @article{hidaka2011packing,
   title={Packing: a geometric analysis of feature selection and category formation},
   author={Hidaka, Shohei and Smith, Linda B},
-  journal={Cognitive systems research},
+  journal={Cognitive Systems Research},
   volume={12},
   number={1},
   pages={1--18},
@@ -18,6 +29,27 @@
   pages={85--125},
   year={2013},
   publisher={Elsevier}
+}
+
+@article{kurtz2015human,
+  title={Human category learning: Toward a broader explanatory account},
+  author={Kurtz, Kenneth J},
+  journal={Psychology of Learning and Motivation},
+  volume={63},
+  pages={77--114},
+  year={2015},
+  publisher={Academic Press}
+}
+
+@article{luce1977choice,
+  title={The choice axiom after twenty years},
+  author={Luce, R Duncan},
+  journal={Journal of mathematical psychology},
+  volume={15},
+  number={3},
+  pages={215--233},
+  year={1977},
+  publisher={Academic Press}
 }
 
 @article{marsh1999inadvertent,
@@ -64,12 +96,16 @@
   publisher={Elsevier}
 }
 
-@article{ward1995s,
-  title={What’s old about new ideas},
-  author={Ward, Thomas B},
-  journal={The creative cognition approach},
-  pages={157--178},
-  year={1995}
+@incollection{ward1995s,
+  author      = {Ward, Thomas B},
+  title       = {What's old about new ideas},
+  editor      = {Smith, Steven M and Ward, Thomas B and Finke, Ronald A},
+  booktitle   = "The creative cognition approach",
+  publisher   = "MIT Press",
+  address     = "Cambridge, MA",
+  year        = 1995,
+  pages       = {157--178},
+  chapter     = 10,
 }
 
 @article{ward2002role,
